--- a/.env.development
+++ b/.env.development
@@ -8,3 +8,8 @@ DB_DATABASE=estate_crm
 # JWT
 JWT_SECRET=local_secret_key
 JWT_EXPIRES=1d
+
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT=587
+MAIL_USER="adilsecondus@gmail.com"
+MAIL_PASS="omhq spex njpp kyva"
