--- a/.env.production
+++ b/.env.production
@@ -8,3 +8,8 @@ DB_DATABASE=estate_crm
 # JWT
 JWT_SECRET=prod_secret_key_super_secure
 JWT_EXPIRES=7d
+
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT=587
+MAIL_USER="adilsecondus@gmail.com"
+MAIL_PASS="omhq spex njpp kyva"
