--- a/.env.development
+++ b/.env.development
@@ -7,9 +7,11 @@ DB_DATABASE=estate_crm
 
 # JWT
 JWT_SECRET=local_secret_key
-JWT_EXPIRES=1d
+JWT_EXPIRES_IN=1d
 
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
 MAIL_USER="adilsecondus@gmail.com"
 MAIL_PASS="omhq spex njpp kyva"
+
+SWAGGER_PASSWORD=skazalya21
