--- a/.env.production
+++ b/.env.production
@@ -7,9 +7,11 @@ DB_DATABASE=estate_crm
 
 # JWT
 JWT_SECRET=prod_secret_key_super_secure
-JWT_EXPIRES=7d
+JWT_EXPIRES_IN=1d
 
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
 MAIL_USER="adilsecondus@gmail.com"
 MAIL_PASS="omhq spex njpp kyva"
+
+SWAGGER_PASSWORD=skazalya21
