--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=estate_user
-DB_PASSWORD=Skazalya21!
+DB_PASSWORD="Skazalya21!"
 DB_DATABASE=estate_crm
 
 JWT_SECRET=prod_secret_key_super_secure
